--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 HQMpd is a mpd clone written in Haskell with default support
 for queues. For more information see the project.pdf in docs/
+
+The project will also include a decoder for the mp3 format.
