--- a/docs/report.tex
+++ b/docs/report.tex
@@ -39,6 +39,7 @@
         Probably the best library I have ever seen
     \subsection{huffman}
         Probably the most unneccessary library I have ever written. Remove?
+        maybe some different approaches should be discussed here? ulf and Koen had their ideas that we discussed and ignored.
 
 \section{Results}
     Beauty, Slowness\ldots
